vendor/eyre-0.6.5/tests/ui/no-impl.rs
use eyre::eyre;

#[derive(Debug)]
struct Error;

fn main() {
    let _ = eyre!(Error);
}
